# sabre-metrics

./: CODE_OF_CONDUCT.md  CONTRIBUTING.md  QUICK_START_GUIDE.md  README.md  TASKS.md  THESIS.md  WTR.md  ats.md  mkdocs.yml  pyproject.toml  thesis.md
Composite Metrics/: ATS.md  RTV.md  RealTechnicianValue.md  TCS.md  TotalRevenueImpact.md
Scoring/: TCSComposite.md
Scoring/Composites/: AgentTimeScore.md  RealTechValue.md  TicketComplexityScore.md
Weighted Metrics/: WRTV.md
Weighted vs Group/: WRealTechValue.md  WTCS.md
docs/: quick_start.md
docs/composite_metrics/: ScalabilityPerformanceScore.md  TicketComplexityScore.MD  TotalRevenueImpact.md  UserFrictionScore.MD
docs/weighted_vs_group/: WATS.md  WSPS.md  WTCS.md  WTRI.md  WUFS.md
examples/: calculate_metrics.py  calculate_wtcs.py
src/sabre_metrics/: __init__.py  agent_time_score.py  cli.py  real_technician_value.py  scalability_performance_score.py  ticket_complexity_score.py  total_revenue_impact.py  user_friction_score.py  weighted_agent_time_score.py  weighted_real_technician_value.py  weighted_scalability_performance_score.py  weighted_ticket_complexity_score.py  (+2 more)
tests/: test_agent_time_score.py  test_real_technician_value.py  test_scalability_performance_score.py  test_ticket_complexity_score.py  test_total_revenue_impact.py  test_user_friction_score.py  test_weighted_agent_time_score.py  test_weighted_real_technician_value.py  test_weighted_scalability_performance_score.py  test_weighted_ticket_complexity_score.py  test_weighted_total_revenue_impact.py  test_weighted_user_friction_score.py
(+3 files in other folders)
